# librpg

./: CMakeLists.txt  build.bat  gen.bat  run.bat
cli/: CMakeLists.txt
cli/include/: arguments.h
cli/source/: arguments.cpp  main.cpp
